TUGAS2_DEVOPS/kubernetes/tugas2_devops_deploy_svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tugas2-devops-main
  labels:
    app: tugas2-devops
    group: network
    env : blue_flag
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tugas2-devops
      env : blue_flag
  template:
    metadata:
      labels:
        app: tugas2-devops
        group: network
        env : blue_flag
    spec:
      containers:
        - image: goldsteincheko118/tugas2_devops:latest
          name: tugas2-devops
          ports:
            - containerPort: 3001
