TUGAS2_DEVOPS/kubernetes/tugas2_devops_sub.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tugas2-devops-sub
  labels:
    app: tugas2-devops
    group: network
    env : green_flag
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tugas2-devops
      env : green_flag
  template:
    metadata:
      labels:
        app: tugas2-devops
        group: network
        env : green_flag
    spec:
      containers:
        - image: goldsteincheko118/tugas2_devop
          name: tugas2-devops
          ports:
            - containerPort: 3001
