TUGAS2_DEVOPS/kubernetes/adminer_deploy_svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer
  labels:
    app: adminer
    group: network
spec:
  replicas: 1  
  selector:
    matchLabels:
      app: adminer  
  template:
    metadata:        
      labels:
        app: adminer
        group: network
    spec:
      containers:   
        - name: adminer 
          image: adminer:4
          ports:
            - containerPort: 8080  
---
apiVersion: v1
kind: Service 
metadata:
  name: adminer
  labels: 
    group: network
spec:
  type: ClusterIP
  selector:           
    app: adminer
  ports:
    - port: 8080          
      targetPort: 8080
