TUGAS2_DEVOPS/kubernetes/access-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: access-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: gui-adminer-k8s.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:  
              service:
                port:
                  number: 8080
                name: adminer
                
    - host: tugas2devops-k8s.com
      http:
        paths: 
          - path: /
            pathType: Prefix
            backend:
              service:
                port:
                  number: 3001
                name: tugas2-devops
